<resources>
    <string name="app_name" translatable="false">Spaceman Chuck</string>

    <!--Warning Fragment-->
    <string name="warning">Please use extreme caution when playing this game so as to not hurt any person or damage any property. Player assumes all liability for any negative consequences of playing this game.</string>
    <string name="accept">I accept.</string>
    <string name="reject">I disagree and won\'t play.</string>

    <!--Toss Listening Fragment-->
    <string name="instructions">Help our astronaut friend go to space!\nPress the button below then carefully and smoothly toss your phone in the air.</string>
    <string name="button_ready">Ready to launch!</string>
    <string name="throw_command">OK, toss!</string>

    <!--Results Fragment-->
    <string name="height_text" translatable="false">%.3f m</string>
    <string name="achievements_button_label">Achievements</string>
    <string name="leaderboards_button_label">Leaderboards</string>
    <string name="retry_button_label">Retry</string>

    <!--Sign in-->
    <string name="sign_in_button_label">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="sign_in_other_error">There was an issue with sign in. Please try again later.</string>

    <!--Results headlines-->
    <string name="result_headline_first_throw">A beautiful first toss!</string>
    <string name="result_headline_personal_best_0">A personal best!</string>
    <string name="result_headline_personal_best_1">Your highest yet!</string>
    <string name="result_headline_personal_best_2">You\'re getting better!</string>
    <string name="result_headline_personal_best_3">Onwards and upwards!</string>
    <string name="result_headline_level_0_0">OK…</string>
    <string name="result_headline_level_0_1">That\'s not nothing…</string>
    <string name="result_headline_level_0_2">Not bad…</string>
    <string name="result_headline_level_0_3">Try again…</string>
    <string name="result_headline_level_0_4">All right…</string>
    <string name="result_headline_level_1_0">Nice!</string>
    <string name="result_headline_level_1_1">Good!</string>
    <string name="result_headline_level_1_2">Yay!</string>
    <string name="result_headline_level_1_3">Good toss!</string>
    <string name="result_headline_level_1_4">Keep it up!</string>
    <string name="result_headline_level_2_0">Good job!</string>
    <string name="result_headline_level_2_1">Flying high!</string>
    <string name="result_headline_level_2_2">Good job!</string>
    <string name="result_headline_level_2_3">Good job!</string>
    <string name="result_headline_level_2_4">Good job!</string>
    <string name="result_headline_level_3_0">Wow! Great job!</string>
    <string name="result_headline_level_3_1">Wow! Awesome!</string>
    <string name="result_headline_level_3_2">Wow! What a throw!</string>
    <string name="result_headline_level_3_3">Wow! Sky high!</string>
    <string name="result_headline_level_3_4">Wow! Intergalactic!</string>

</resources>
